--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
       "email": "support@mailup.com"
     },
     {
-      "name": "Internet.sm",
-      "email": "tech@internetsm.com"
+      "name": "Giuseppe Morelli",
+      "email": "info@giuseppemorelli.net"
+    },
+    {
+      "name":"MageSpecialist",
+      "email":"info@magespecialist.it"
     }
   ],
   "require": {
