[dev] changelog and readme
- upgrade version
- update changelog
- update readme

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     }
   ],
   "require": {
-    "magento-hackathon/magento-composer-installer": "*"
+    "magento-hackathon/magento-composer-installer": "*",
+    "php": ">=5.5.0"
   }
 }
